--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,9 @@
 {
-    "python.testing.unittestArgs": [
-        "-v",
-        "-s",
-        ".",
-        "-p",
-        "test_*.py"
+    "python.pythonPath": "C:\\ProgramData\\Anaconda3\\python.exe",
+    "python.testing.pytestArgs": [
+        "."
     ],
-    "python.testing.pytestEnabled": false,
+    "python.testing.unittestEnabled": false,
     "python.testing.nosetestsEnabled": false,
-    "python.testing.unittestEnabled": true
+    "python.testing.pytestEnabled": true
 }
